<resources>
    <string name="app_name">WeatherForcasting</string>
    <string name="warning_you_are_offline">Warning you \'re in offline mode and the data is not up to date.</string>
    <string name="error_happened">There is an error happened please try again</string>
    <string name="city">City</string>
    <string name="no_data">Couldn\'t fetch data</string>
    <string name="retry">Retry</string>
    <string name="temp">temp: %s</string>
    <string name="pressure">pressure: %s</string>
    <string name="weather_desc">weather: %s</string>
</resources>