<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    app:cardCornerRadius="12dp"
    android:layout_marginTop="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintStart_toStartOf="parent"
    app:cardElevation="5dp"
    android:layout_marginHorizontal="10dp"
    android:id="@+id/cardContainer"
    android:paddingVertical="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:minHeight="60dp"
        android:paddingVertical="5dp"
        android:id="@+id/constrainContainer"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/temp"
            android:text="@string/temp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/dateString"
            android:textAlignment="viewStart"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/dateString"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="viewStart"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintTop_toTopOf="@+id/temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pressure"
            android:textColor="@color/black"
            android:text="@string/pressure"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weatherDesc"
            android:textColor="@color/black"
            android:text="@string/weather_desc"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>