<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:padding="10dp"
            android:id="@+id/offlineMode"
            android:visibility="gone"
            android:text="@string/warning_you_are_offline"
            android:textColor="@color/white"
            android:background="@color/blue_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fromCard"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offlineMode"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:id="@+id/containerClickFrom"
                android:minHeight="45dp"
                android:layout_height="wrap_content">


                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:hint="@string/city"
                    android:ellipsize="end"
                    android:paddingHorizontal="15dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/valueSelectedFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/weatherRecycle"
            app:layout_constraintTop_toBottomOf="@+id/fromCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
    <com.wang.avi.AVLoadingIndicatorView
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/progress"
        tools:visibility="visible"
        app:indicatorColor="@color/black"
        app:indicatorName="BallTrianglePathIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_result"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/no_result_text"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/no_data"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/retryButton"
            android:text="@string/retry"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/no_result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>